# Ziqe

./: BUILD  CMakeLists.txt  MainDriver.cpp  MiniLicence.txt  NotImplemented.txt  OnFailute.txt  WORKSPACE  Ziqe.files  Ziqe.includes  Ziqe.pro  main.cpp
Base/: Allocator.cpp  Allocator.hpp  Array.cpp  Array.hpp  Atomic.cpp  Atomic.hpp  BUILD  CMakeLists.txt  Callback.cpp  Callback.h  Callback.hpp  Checks.cpp  Checks.h  Checks.hpp  CompilerSymbols.cpp  ConstructableStorage.cpp  ConstructableStorage.hpp  Constructor.hpp  DummyPointer.cpp  DummyPointer.hpp  Expected.cpp  Expected.hpp  ExtendedVector.cpp  ExtendedVector.hpp  ExtendedVectorWritable.cpp  ExtendedVectorWritable.hpp  FieldReader.cpp  FieldReader.h  FieldReader.hpp  FieldWriter.cpp  FieldWriter.h  FieldWriter.hpp  FieldsReader.cpp  FieldsReader.h  ForwardList.cpp  ForwardList.h  FunctionTools.cpp  FunctionTools.h  FunctionTools.hpp  HashTable.cpp  (+82 more)
Base/Tests/: CMakeLists.txt  ExpectedTest.cpp  HashTableTest.cpp  LinkedListTest.cpp  OptionalTest.cpp  ZqObjectTest.cpp
Base/ZiqeAPI/: CMakeLists.txt  Mutex.h  Process.h  SpinLock.h  SystemCalls.h  Types.h
Base/ZiqeAPI/Linux/: .Linux.ko.cmd  .Linux.mod.o.cmd  .Linux.o.cmd  .SystemCalls.ko.cmd  .SystemCalls.mod.o.cmd  .SystemCalls.o.cmd  CMakeLists.txt  Linux.c  Linux.ko  Linux.mod.c  Makefile  Memory.c  SystemCalls.c  SystemCalls.mod.c  modules.order
BuildTools/: cc_class_library.bzl  config.bzl  config_repo.bzl  configure_target_aspect.bzl  driver_functions.bzl  platform_settings.bzl  preconfig_repo.bzl  public_filegroup.bzl  test.bzl
Core/: CMakeLists.txt  GlobalMessageStreamFactory.cpp  GlobalMessageStreamFactory.hpp  GlobalPeers.cpp  GlobalPeers.hpp  GlobalPeersWorker.cpp  GlobalPeersWorker.h  GlobalProcess.cpp  GlobalProcess.h  GlobalProcess.hpp  GlobalProcessID.cpp  GlobalProcessID.h  GlobalProcessManager.cpp  GlobalProcessManager.h  GlobalProcessManager.hpp  GlobalThread.cpp  GlobalThread.h  GlobalThread.hpp  GlobalThreadID.cpp  GlobalThreadID.h  GlobalThreadManager.cpp  GlobalThreadManager.h  GlobalThreadManager.hpp  MemoryRevisionTree.cpp  MemoryRevisionTree.hpp  MessageStreamFactoryInterface.cpp  MessageStreamFactoryInterface.hpp  Peer.cpp  Peer.h  PeersManager.cpp  PeersManager.h  Process.cpp  Process.h  ProcessMemory.cpp  ProcessMemory.h  ProcessMemory.hpp  ProcessPeersClient.cpp  ProcessPeersClient.hpp  ProcessPeersClientWorker.cpp  ProcessPeersClientWorker.h  (+22 more)
Core/Client/: CMakeLists.txt  PeerLookupClient.cpp  PeerLookupClient.hpp  Process.cpp  Process.hpp  Thread.cpp  Thread.hpp  ThreadManager.cpp  ThreadManager.hpp  ThreadServer.cpp  ThreadServer.hpp
Core/Common/: CMakeLists.txt  GlobalPeers.cpp  GlobalPeers.hpp  MemoryRevisionTree.cpp  MemoryRevisionTree.hpp  MessageStreamFactoryInterface.hpp  ProcessMemory.hpp  ProcessMemoryManager.hpp  ProcessPeersClient.cpp  ProcessPeersClient.hpp  ProcessPeersServer.cpp  ProcessPeersServer.hpp  Types.cpp  Types.hpp
Core/Host/: CMakeLists.txt  PeerLookupServer.cpp  PeerLookupServer.hpp  Process.cpp  Process.hpp  ProcessManager.cpp  ProcessManager.hpp  Thread.cpp  Thread.hpp  ThreadClient.cpp  ThreadClient.hpp  ThreadManager.cpp  ThreadManager.hpp
Core/Protocol/: CMakeLists.txt  MachineInfo.cpp  MachineInfo.hpp  MemoryMap.cpp  MemoryMap.hpp  MemoryRevision.cpp  MemoryRevision.hpp  Message.cpp  Message.hpp  MessageServer.cpp  MessageServer.hpp  MessageStream.cpp  MessageStream.hpp  MessagesGenerator.cpp  MessagesGenerator.hpp  MessagesParser.cpp  MessagesParser.hpp  MessagesWriter.cpp  MessagesWriter.hpp  Object.cpp  Object.hpp  ThreadState.cpp  ThreadState.hpp
Core/Tasks/: CMakeLists.txt  RunThreadTask.cpp  RunThreadTask.h  SystemCallTask.cpp  SystemCallTask.h
Core/ZiqeProtocol/: CMakeLists.txt  GlobalPeers.cpp  GlobalPeers.h  GlobalPeers.hpp  MachineInfo.cpp  MachineInfo.h  MachineInfo.hpp  MemoryMap.cpp  MemoryMap.h  MemoryMap.hpp  MemoryRevision.cpp  MemoryRevision.h  MemoryRevision.hpp  MemoryRevisionTree.cpp  MemoryRevisionTree.h  MemoryRevisionTree.hpp  Message.cpp  Message.h  Message.hpp  MessageStream.cpp  MessageStream.hpp  MessagesGenerator.cpp  MessagesGenerator.h  MessagesGenerator.hpp  MessagesParser.cpp  MessagesParser.h  MessagesParser.hpp  MessagesStream.cpp  MessagesStream.h  PeerConnection.cpp  PeerConnection.h  ProcessMemoryManager.cpp  ProcessPeers.cpp  ProcessPeers.h  ProcessPeersClient.cpp  ProcessPeersClient.h  ProcessPeersClient.hpp  ProcessPeersServer.cpp  ProcessPeersServer.h  ProcessPeersServer.hpp  (+11 more)
Network/: CMakeLists.txt  NetworkPacket.cpp  NetworkPacket.h  NetworkPacket.hpp  NetworkProtocol.cpp  NetworkProtocol.h  NetworkProtocol.hpp  NetworkProtocolPool.cpp  NetworkProtocolPool.h  NetworkSession.cpp  NetworkSession.hpp  Redesign.md  Server.cpp  Server.hpp  Stream.cpp  Stream.hpp  TcpServer.cpp  TcpServer.hpp  TcpSession.cpp  (+27 more)
Utils/: Allocator.cpp  Allocator.hpp  Array.cpp  Array.hpp  BUILD  CMakeLists.txt  Callback.cpp  Callback.hpp  Checks.hpp  CompilerSymbols.cpp  Constructor.cpp  Constructor.hpp  DummyPointer.cpp  DummyPointer.hpp  Expected.cpp  Expected.hpp  ExtendedVector.cpp  ExtendedVector.hpp  ExtendedVectorWritable.cpp  ExtendedVectorWritable.hpp  FieldReader.cpp  FieldReader.hpp  FieldWriter.cpp  FieldWriter.hpp  FunctionTools.hpp  HashTable.hpp  IRawStream.cpp  IRawStream.hpp  IteratorTools.hpp  LinkedList.cpp  LinkedList.hpp  LocalProcess.cpp  LocalThread.hpp  Logger.cpp  Logger.hpp  Macros.hpp  Memory.hpp  Optional.cpp  Optional.hpp  ProcessManager.cpp  (+14 more)
Utils/Tests/: BUILD  CMakeLists.txt  ExpectedTest.cpp  HashTableTest.cpp  LinkedListTest.cpp  OptionalTest.cpp
ZiqeAPI/: CMakeLists.txt  EntryPoints.h  Logging.h  Macros.h  Memory.h  Mutex.h  OSSystemCallInfo.h  Process.h  RWLock.h  Readme.md  Socket.h  SpinLock.h  SystemCalls.h  Types.h
ZiqeAPI/Linux/: CMakeLists.txt  CompileLinuxModule.sh  EntryPoint.c  Errors.gen.h  Logging.c  Makefile  Memory.c  MemoryConfig.gen.h  MemoryInline.gen.h  Mutex.c  Process.c  Socket.c  SocketConfig.gen.h  SpinLock.c  SystemCalls.c
ZiqeAPI/Posix/: CMakeLists.txt  Memory.c  SocketConfig.gen.h  SpinLock.c  SystemCalls.c
(+6 files in other folders)
